fix iphone stupid bugs through hacky shit (#38)
* kill handlebars

* try appearance properties

* test target everything in html

* try now...

* oops broke something

* blackbg

* spacing fixes

* spacing fix2

* test set color onload??

* oops i messed up

--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,12 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
+button {
+  -webkit-appearance: none !important;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 html, input {
   font-family: 'Inter', sans-serif;
 }
@@ -48,7 +54,7 @@ ul {
 
 .login.page .form {
   position: absolute;
-
+  background-color: black;
   text-align: center;
   top: 50px;
   width: 100%;
@@ -121,7 +127,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   border-collapse:separate;
-  border-spacing: 0 36px;
+  border-spacing: 0 24px;
 }
 
 #descriptionarea {
@@ -131,7 +137,6 @@ ul {
 }
 
 .instructionarea {
-  margin-top: 35px;
   padding-left:90px;
   padding-right:90px;
 }
@@ -158,7 +163,7 @@ ul {
 }
 
 #enter {
-  margin-top:40px;
+  margin-top:20px;
   width: 250px;
   height: 40px;
   font-family: Inter;
